# polkit-agent

./: .gitignore  AUR_INSTALL.md  CHANGES_SUMMARY.md  Cargo.toml  Cross.toml  LICENSE  PACKAGING.md  PKGBUILD-polly  PKGBUILD-polly-git  RELEASE.md  Readme.md  generate-srcinfo.sh  polly.install  polly.service
.github/workflows/: release.yml  rust.yml
src/: main.rs  mypolkit.rs  wain.rs
src/mypolkit/: imp.rs
